# devops

./: CMakeLists.txt  Jenkinsfile  build.sh  file2  pom.xml  sonar-project.properties  sonarJenkinsfile
 /home/ec2-user/remoting/jarCache/CB/: 644A046DAD9EDE74C9B84CAEF245D1.jar8350450567043985332tmp
 /home/ec2-user/remoting/logs/: remoting.log.0  remoting.log.1  remoting.log.2  remoting.log.3  remoting.log.4
src/main/java/org/jacoco/examples/maven/java/: HelloWorld.java
src/test/java/org/jacoco/examples/maven/java/: HelloWorldTest.java
